EssentialCSharp.Web/wwwroot/css/styles.css
/* ... */
details > summary {
  list-style: none;
  position: relative;
}

details > summary::-webkit-details-marker {
  display: none;
}

.tree summary:focus {
  outline: none;
}

.tree summary:focus-visible {
  outline: none;
}

.tree summary::before {
  font: var(--fa-font-solid);
  content: "\f054";
  display: block;
  position: absolute;
  font-size: 0.75rem;
  left: 0px;
  top: 4px;
}

.tree details[open] > summary::before {
  font: var(--fa-font-solid);
  content: "\f078";
  display: block;
  position: absolute;
  left: 0px;
  top: 4px;
}

.tree summary.nested::before {
  font: var(--fa-font-solid);
  content: "\f054";
  display: block;
  position: absolute;
  font-size: 0.75rem;
  left: -20px;
  top: 4px;
}

.tree details[open] > summary.nested::before {
  font: var(--fa-font-solid);
  content: "\f078";
  display: block;
  position: absolute;
  font-size: 0.75rem;
  left: -20px;
  top: 0px;
  width: 19px;
}

.tree details[open] > summary::before {
  font: var(--fa-font-solid);
  content: "\f078";
  display: block;
  position: absolute;
  font-size: 0.75rem;
  left: 0px;
  top: 4px;
}

.section-link {
  font-style: normal;
  text-decoration: none;
  color: black;
}

.current-section {
  font-weight: bold;
  text-decoration: none;
  color: #11356a;
}

.current-li {
  background-color: #e6e7e8;
  border-radius: 15px;
}

.toc-padding {
  padding-top: 15px;
  padding-right: 18px;
  padding-left: 15px;
  scrollbar-gutter: stable;
}

/* Top Banner Bar */

.header-background {
  height: var(--toolbar-height);
  width: 100%;
  display: flex;
  justify-content: center;
  background: var(--primary-dark-color);
  position: fixed;
  top: 0;
  z-index: 2;
  padding: 0 2em;
}

@media only screen and (max-width: 540px) {
  .header-background {
    padding: 0 1em;
  }
}

.banner {
  height: var(--toolbar-height);
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  height: 100%;
}

.banner-main-label {
  font-style: normal;
  font-weight: 300;
  font-size: 2rem;
  margin-top: 5px;
  margin-bottom: 5px;
  margin-right: 5px;
  margin-left: 5px;
  text-decoration: none;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.banner-main-label-center {
  margin-top: 10px;
  margin-right: 5px;
  margin-left: 5px;
}

/* Content Hiding Styles */

.hide-on-mobile {
  display: block;
}

@media only screen and (max-width: 768px) {
  .hide-on-mobile {
    display: none;
  }
}

.show-on-mobile {
  display: none;
}

@media only screen and (max-width: 768px) {
  .show-on-mobile {
    display: block;
  }
}

.show {
  display: block;
}

.hide {
  display: none;
}

/* Page Footer */

.footer {
  padding: 1em 2em;
  bottom: 0;
  width: 100%;
  background-color: var(--grey-lighten-2);
}

@media only screen and (max-width: 768px) {
  .footer {
    text-align: center;
  }
}

.footer .footer-link {
  display: block;
  justify-content: right;
  padding-left: 1em;
}

/* Home Page Styles */

.quote {
  max-width: 600px;
  display: inline-block;
  margin: 40px 0 20px 0;
}

.quote .quote-author {
  padding-top: 20px;
  text-align: right;
}

.quote .quote-content {
  position: relative;
}

.quote .quote-content .quote-text {
  font-size: large;
  text-align: center;
  background-color: var(--grey-lighten-2);
  padding: 25px 20px 20px 20px;
}

.quote .quote-content .quote-icon {
  color: var(--primary-accent-color);
  position: absolute;
  top: -30px;
  left: 20px;
  z-index: 1;
  font-size: 40px;
}

.quote .quote-content .quote-text::after {
  content: " ";
  position: absolute;
  top: 100%;
  left: 85%;
  margin-left: -5px;
  border-width: 15px;
  border-style: solid;
  border-color: var(--grey-lighten-2) transparent transparent transparent;
}

/* Anchor Styling */
.heading-wrapper:not(:hover) .anchor-link:not(:focus-visible) {
    opacity: 0;
}

.anchor-link {
    border: none;
    color: var(--link-color);
    text-decoration: none;
    position: absolute;
    font-size: 14px;
    margin: 4px 2px;
    transition-duration: 0.4s;
    cursor: pointer;
    background-color: transparent;
}

    .anchor-link:hover {
        color: var(--link-color-hover);
    }


/* The snackbar - position it at the bottom and in the middle of the screen */
#snackbar {
  visibility: hidden; /* Hidden by default. Visible on click */
  min-width: 250px; /* Set a default minimum width */
  margin-left: -125px; /* Divide value of min-width by 2 */
  background-color: #333; /* Black background color */
  color: #fff; /* White text color */
  text-align: center; /* Centered text */
  border-radius: 2px; /* Rounded borders */
  padding: 16px; /* Padding */
  position: fixed; /* Sit on top of the screen */
  z-index: 1; /* Add a z-index if needed */
  left: 50%; /* Center the snackbar */
  bottom: 30px; /* 30px from the bottom */
}

/* Show the snackbar when clicking on a button (class added with JavaScript) */
#snackbar.show {
  visibility: visible; /* Show the snackbar */
  /* Add animation: Take 0.5 seconds to fade in and out the snackbar.
        However, delay the fade out process for 2.5 seconds */
  -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
  animation: fadein 0.5s, fadeout 0.5s 2.5s;
}

/* Animations to fade the snackbar in and out */
@-webkit-keyframes fadein {
  from {
    bottom: 0;
    opacity: 0;
  }

  to {
    bottom: 30px;
    opacity: 1;
  }
}

@keyframes fadein {
  from {
    bottom: 0;
    opacity: 0;
  }

  to {
    bottom: 30px;
    opacity: 1;
  }
}

@-webkit-keyframes fadeout {
  from {
    bottom: 30px;
    opacity: 1;
  }

  to {
    bottom: 0;
    opacity: 0;
  }
}

@keyframes fadeout {
  from {
    bottom: 30px;
    opacity: 1;
  }

  to {
    bottom: 0;
    opacity: 0;
  }
}

.nav-pills .nav-link.active,
.nav-pills .show > .nav-link {
  color: #fff;
  background-color: #1b6ec2;
  border-color: #1861ac;
}

button.accept-policy {
  font-size: 1rem;
  line-height: inherit;
}

/*vue transitions*/

.slide-fade-enter-active {
  transition: all 0.3s ease-out;
}
/* ... */

